Consultado banco pela lista

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 DBHOST="localhost"
 DBUSER="root"
-DBPASS="885522"
+DBPASS="Sa78641218"
 DB="appoint"
 
-PORTA="50000"
+PORTA="50001"
 
 TOKEN_SECRET="Appoint"
